# string-calculator

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
api/: main.py  model.py
cli/: app.py
string_calculator/: calculator.py
tests/: test_api.py  test_calculator.py  test_cli.py
