[tool.poetry]
name = "string-calculator"
version = "0.1.0"
description = ""
authors = ["utKarsh009 <utkarshsrivastava994@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
ruff = "^0.6.3"
black = "^24.8.0"
click = "^8.1.7"
fastapi = {extras = ["standard"], version = "^0.112.2"}
uvicorn = "^0.30.6"


[tool.ruff]
line-length = 120
target-version = "py312"
lint.select = ["E", "F", "C"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
